--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,12 @@ minecraft {
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
+configurations.all {
+    resolutionStrategy { 
+        force 'com.google.guava:guava:21.0'
+    }
+}
+
 dependencies {
     // you may put jars on which you depend on in ./libs
     // or you may define them like so..
